--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,16 @@ services:
     expose:
       - '3306'
       - '3308'
- 
+
+  javase-postgres:
+    image: postgres:latest
+    container_name: javase-postgres
+    restart: always
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    ports:
+      - '5432:5432'
+    expose:
+      - '3306'
