--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,10 @@ services:
     container_name: javase
     environment:
       MYSQL_DATABASE: 'javase'
-      MYSQL_USER: ${MYSQL_USER}
-      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_USER: '${MYSQL_USER}'
+      MYSQL_PASSWORD: '${MYSQL_PASSWORD}'
+      MYSQL_ROOT_PASSWORD: '${MYSQL_ROOT_PASSWORD}'
     ports:
-      # HOST-PORT:CONTAINER-PORT
       - '3308:3306'
     expose:
       - '3306'
@@ -20,10 +19,26 @@ services:
     container_name: javase-postgres
     restart: always
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      POSTGRES_USER: '${POSTGRES_USER}'
+      POSTGRES_PASSWORD: '${POSTGRES_PASSWORD}'
+      POSTGRES_DB: '${POSTGRES_DB}'
     ports:
       - '5432:5432'
     expose:
-      - '3306'
+      - '5432'
+
+  pointofsale:
+    image: mysql:latest
+    restart: always
+    container_name: pos
+    environment:
+      MYSQL_DATABASE: 'pos'
+      MYSQL_USER: 'pos'
+      MYSQL_PASSWORD: 'pos'
+      MYSQL_ROOT_PASSWORD: 'pos'
+    ports:
+      - '3309:3307'
+    expose:
+      - '3307'
+      - '3309'
+
