--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
               <configuration>
                 <transformers>
                   <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                    <mainClass>com.systechafrica.pos.posreviewed.POSReviewed</mainClass>
+                    <mainClass>com.systechafrica.restaurant.Restaurant</mainClass>
                   </transformer>
                 </transformers>
               </configuration>
